[BUGFIX] Break too long words in notifications
Original-Commit-Hash: 115aaf9352130d72ada3e7e2acef6a371c7ba2b9

--- a/TYPO3.Neos/Resources/Public/StyleSheet/_style-workInProgress.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/_style-workInProgress.scss
@@ -261,6 +261,7 @@ button.t3-create-new-content {
 		line-height: 1.4em;
 		padding: 10px 35px 10px 10px;
 		margin-bottom: 10px;
+		word-wrap: break-word;
 		@include border-radius(0);
 		&.alert-error {
 			border-top-color: $red;
